--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/color": "^3.0.6",
     "@types/webpack": "^5.28.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
