--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/color": "^3.0.6",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.28.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
