--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx webpack --watch & npx tailwindcss -i ./input.css -o ./dist/output.css --watch"
+    "dev": "npx webpack --watch & npx tailwindcss -i ./input.css -o ./dist/output.css --watch",
+    "serve": "static-server"
   },
   "keywords": [],
   "author": "",
@@ -24,9 +25,12 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.3",
     "@reduxjs/toolkit": "^2.2.3",
+    "graphql": "^16.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "static-server": "^2.2.1"
   }
 }
