--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "plugins": [{"name": "typescript-plugin-css-modules"}],
     /* Visit https://aka.ms/tsconfig to read more about this file */
 
     /* Projects */
