--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
-    "file-loader": "^6.2.0"
+    "css-loader": "^7.1.1",
+    "file-loader": "^6.2.0",
+    "style-loader": "^4.0.0"
+  },
+  "dependencies": {
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
