--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx webpack --watch & npx tailwindcss -i ./input.css -o ./dist/output.css --watch",
-    "serve": "static-server"
+    "build": "npx webpack --watch",
+    "compile-tailwind": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch",
+    "serve": "static-server",
+    "dev": "npm run build & npm run compile-tailwind & npm run serve"
   },
   "keywords": [],
   "author": "",
