fix client side requests for authentication

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "types": ["node"],
     "sourceMap": true,
+    "strictNullChecks": true,
     "paths": {
       "@src/*": [
         "./src/*"
