--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/sqlite3": "^3.1.11",
     "css-loader": "^7.1.1",
     "file-loader": "^6.2.0",
     "style-loader": "^4.0.0"
