--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -10,6 +10,9 @@
     "types": ["node"],
     "sourceMap": true,
     "strictNullChecks": true,
+    "allowImportingTsExtensions": true,
+    "emitDeclarationOnly": true,
+    "composite": true,
     "paths": {
       "@src/*": [
         "./src/*"
