--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.28.5",
+    "babel-plugin-styled-components": "^2.1.4",
     "tailwindcss": "^3.4.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
@@ -33,6 +34,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "static-server": "^2.2.1"
+    "static-server": "^2.2.1",
+    "styled-components": "^6.1.11"
   }
 }
