--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "build": "npx webpack --watch",
     "compile-tailwind": "npx tailwindcss -i ./input.css -o ./dist/output.css --watch",
     "serve": "static-server",
-    "dev": "npm run build & npm run compile-tailwind & npm run serve"
+    "dev": "npm run build & npm run compile-tailwind & npm run serve",
+    "dev-vite": "vite"
   },
   "keywords": [],
   "author": "",
@@ -19,11 +20,13 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/webpack": "^5.28.5",
+    "@vitejs/plugin-react-swc": "^3.6.0",
     "babel-plugin-styled-components": "^2.1.4",
     "tailwindcss": "^3.4.3",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
+    "vite": "^5.2.11",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
