--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "@apollo/client": "^3.10.3",
     "@reduxjs/toolkit": "^2.2.3",
     "graphql": "^16.8.1",
+    "perlin-noise": "^0.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
